--- a/Question/list.html
+++ b/Question/list.html
@@ -64,7 +64,7 @@
         </nav>
         <div class="question-top">
             <div class="question-list-sum">
-                <p>총 <span>3</span> 건</p>
+                <p>총 <span>5</span> 건</p>
             </div>
             <form class="question-search" action="" method="get">
                 <select name="searchKey" class="search-key">
@@ -74,7 +74,7 @@
                     <option value="search-author">작성자</option>
                 </select>
                 <div class="search-box">
-                    <input class="search-txt" type="text" placeholder="검색어를 입력하세요.">
+                    <input class="search-txt" type="text">
                     <button class="search-btn" type="submit">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
@@ -84,6 +84,7 @@
         <table class="question-list-table">
             <tr class="table-header">
                 <th>번호</th>
+                <th>언어</th>
                 <th>제목</th>
                 <th>작성자</th>
                 <th>작성일</th>
@@ -91,7 +92,8 @@
                 <th>추천수</th>
             </tr>
             <tr class="question-5 clickable" data-url="/question/5">
-                <td class="question-count">5</th>
+                <td class="question-count">5</tㅇ>
+                <td class="question-language">C</td>
                 <td class="question-title">우리학교 YB 온다!!!</td>
                 <td class="question-writer">수빈</td>
                 <td class="question-post-date">2024-05-14</td>
@@ -99,7 +101,8 @@
                 <td class="question-recommend-count">243</td>
             </tr>
             <tr class="question-4 clickable" data-url="/question/4">
-                <td class="question-count">4</th>
+                <td class="question-count">4</td>
+                <td class="question-language">C#</td>
                 <td class="question-title">우리학교 싸이 온다!!!</td>
                 <td class="question-writer">수빈</td>
                 <td class="question-post-date">2024-05-14</td>
@@ -107,7 +110,8 @@
                 <td class="question-recommend-count">43</td>
             </tr>
             <tr class="question-3 clickable" data-url="/question/3">
-                <td class="question-count">3</th>
+                <td class="question-count">3</td>
+                <td class="question-language">Python</td>
                 <td class="question-title">우리학교 뉴진스 온다!!!</td>
                 <td class="question-writer">수빈</td>
                 <td class="question-post-date">2024-05-14</td>
@@ -115,7 +119,8 @@
                 <td class="question-recommend-count">330</td>
             </tr>
             <tr class="question-2 clickable" data-url="/question/2">
-                <td class="question-count">2</th>
+                <td class="question-count">2</td>
+                <td class="question-language">Html</td>
                 <td class="question-title">졸려</td>
                 <td class="question-writer">예랑</td>
                 <td class="question-post-date">2024-05-11</td>
@@ -123,7 +128,8 @@
                 <td class="question-recommend-count">463</td>
             </tr>
             <tr class="question-1 clickable" data-url="/question/1">
-                <td class="question-count">1</th>
+                <td class="question-count">1</td>
+                <td class="question-language">Java</td>
                 <td class="question-title">놀고싶어</td>
                 <td class="question-writer">윤진</td>
                 <td class="question-post-date">2024-05-03</td>
