--- a/Question/write.html
+++ b/Question/write.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>질문 작성</title>
+
     <link rel="stylesheet" href="/common.css">
+    <link rel="stylesheet" href="/Question/write.css">
     <script src="/js/jquery-3.7.1.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
