--- a/html/Information/write.html
+++ b/html/Information/write.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/Login/login.css">
     <link rel="stylesheet" href="/css/top-background.css">
-    <link rel="stylesheet" href="/css/Question/write.css">
+    <link rel="stylesheet" href="/css/Information/write.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -36,11 +36,11 @@
         <h1 class="top-background-text">질문</h1>
     </div>
 
-    <main class="question-write">
+    <main class="information-write">
         <div class="write-top">
             <span>질문</span>작성
         </div>
-        <form class="writeForm" id="question-write-container" action="" method="post">
+        <form class="writeForm" id="information-write-container" action="" method="post">
             <div class="writeFrom-top">
                 <div class="select-container">
                     <select name="write-language" class="selectBox">
@@ -56,16 +56,16 @@
                         <option value="others">Others</option>
                     </select>
                 </div>
-                <input type="text" id="question-subject-input" class="writeSubject-input" placeholder="제목을 입력하세요">
+                <input type="text" id="information-subject-input" class="writeSubject-input" placeholder="제목을 입력하세요">
             </div>
             <div class="writeForm-content">
-                <textarea id="question-content-input" class="writeContent-input" placeholder="내용을 입력하세요"></textarea>
+                <textarea id="information-content-input" class="writeContent-input" placeholder="내용을 입력하세요"></textarea>
             </div>
             <div class="write-bottom">
-                <div id="question-write-img" class="imgBtn">
+                <div id="information-write-img" class="imgBtn">
                     <i class="fa-solid fa-image"></i>이미지 첨부
                 </div>
-                <div id="question-write-submit" class="writeBtn">등록</div>
+                <div id="information-write-submit" class="writeBtn">등록</div>
             </div>
         </form>
     </main>
