--- a/html/header.html
+++ b/html/header.html
@@ -36,7 +36,7 @@
         </nav>
         <!-- 로그인 버튼 -->
         <div class="login-btn">
-            <a href="/">로그인</a>
+            로그인
         </div>
     </header>
 
@@ -50,6 +50,7 @@
             }
         });
     </script>
+
 </body>
 
 </html>
