--- a/html/Information/list.html
+++ b/html/Information/list.html
@@ -8,6 +8,7 @@
     <title>질문 게시판</title>
 
     <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/Login/login.css">
     <link rel="stylesheet" href="/css/top-background.css">
     <link rel="stylesheet" href="/css/Information/list.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -19,6 +20,9 @@
         $(document).ready(function () {
             $(".headers").load("/html/header.html");
             $(".footers").load("/html/footer.html");
+            $(".login").load("/html/Login/login.html", function () {
+                initializeLoginModal();
+            });
         });
     </script>
 </head>
@@ -26,6 +30,8 @@
 <body>
     <!-- 헤더 -->
     <div class="headers"></div>
+
+    <div class="login"></div>
 
     <!-- top 배경이미지 -->
     <div class="top-background">
@@ -141,7 +147,7 @@
         <!-- 정보 글쓰기 버튼 -->
         <!-- 누르면 글쓰기 페이지로 넘어감 -->
         <div class="information-create-btn">
-            <a href="/html/Question/write.html">글쓰기</a>
+            <a href="/html/Information/write.html">글쓰기</a>
         </div>
         <!-- 질문 pag -->
         <!-- !! 이부분 장고로 가능하다고 들었음 -->
@@ -176,6 +182,7 @@
     <!-- 바닥글 -->
     <div class="footers"></div>
 
+    <script src="/js/login-modal.js"></script>
     <script>
         // 질문 언어 nav 마우스 대면 모양 변함
         const listItems = document.querySelectorAll('.languageList li');
