--- a/html/Information/view.html
+++ b/html/Information/view.html
@@ -8,6 +8,7 @@
     <title>정보 보기</title>
 
     <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/Login/login.css">
     <link rel="stylesheet" href="/css/top-background.css">
     <link rel="stylesheet" href="/css/Information/view.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -19,6 +20,9 @@
         $(document).ready(function () {
             $(".headers").load("/html/header.html");
             $(".footers").load("/html/footer.html");
+            $(".login").load("/html/Login/login.html", function () {
+                initializeLoginModal();
+            });
         });
     </script>
 </head>
@@ -26,6 +30,8 @@
 <body>
     <!-- 헤더 -->
     <div class="headers"></div>
+
+    <div class="login"></div>
 
     <!-- top 배경이미지 -->
     <div class="top-background">
@@ -160,7 +166,7 @@
     <div class="footers"></div>
 
     <script src="/js/buttonEvents.js"></script>
-
+    <script src="/js/login-modal.js"></script>
 </body>
 
 </html>
