--- a/html/Question/list.html
+++ b/html/Question/list.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>질문 게시판</title>
+    <title>질문 리스트</title>
 
     <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/Login/login.css">
     <link rel="stylesheet" href="/css/top-background.css">
     <link rel="stylesheet" href="/css/Question/list.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -19,6 +20,9 @@
         $(document).ready(function () {
             $(".headers").load("/html/header.html");
             $(".footers").load("/html/footer.html");
+            $(".login").load("/html/Login/login.html", function () {
+                initializeLoginModal();
+            });
         });
     </script>
 </head>
@@ -26,6 +30,8 @@
 <body>
     <!-- 헤더 -->
     <div class="headers"></div>
+
+    <div class="login"></div>
 
     <!-- top 배경이미지 -->
     <div class="top-background">
@@ -175,6 +181,7 @@
     <!-- 바닥글 -->
     <div class="footers"></div>
 
+    <script src="/js/login-modal.js"></script>
     <script>
         // 질문 언어 nav 마우스 대면 모양 변함
         const listItems = document.querySelectorAll('.languageList li');
