로그인 회원가입 추가

--- a/html/Login/login.html
+++ b/html/Login/login.html
@@ -20,8 +20,8 @@
                 <input type="password" class="login-password" placeholder="비밀번호">
                 <button type="submit" class="loginBtn">로그인</button>
                 <div class="login-more-action">
-                    <div class="find-id">아이디 찾기</div>
-                    <div class="find-password">비밀번호 찾기</div>
+                    <div class="findIdBtn">아이디 찾기</div>
+                    <div class="findPasswordBtn">비밀번호 찾기</div>
                     <div class="signupNavigator">회원가입</div>
                 </div>
             </form>
